# RAG-QA-SYSTEM

./: .coverage  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml
data/sample_docs/: ai_research_paper.txt  company_handbook.md  product_faq.txt
docs/: architecture.md
scripts/: evaluate.py  seed_data.py
src/: __init__.py  config.py
src/api/: main.py  middleware.py  routes.py  schemas.py
src/generation/: chain.py  llm.py  prompt_templates.py
src/ingestion/: __init__.py  chunker.py  embedder.py  loader.py
src/retrieval/: reranker.py  retriever.py
src/ui/: streamlit_app.py
src/vectorstore/: __init__.py  base.py  chroma_store.py
tests/: __init__.py  conftest.py  test_api.py  test_chain.py  test_chunker.py  test_retriever.py
